@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
+<rss version="2.0" xmlns:differentprefix="http://www.w3.org/2005/Atom">
+  <channel>
+    <title>Feed title</title>
+    <link>Feed link</link>
+    <description>Feed description</description>
+    <differentprefix:link href="http://example.com/" rel="self" type="application/rss+xml"/>
+    <item>
+      <title>Item title</title>
+      <link>Item link</link>
+      <description>Item description</description>
+    </item>
+  </channel>
+</rss>
